fix login register & account